Port MezzConfig GUI to Minecraft 1.21.11 on its own branch