@@ -33,7 +33,7 @@ final class ConfigCategoryTree {
 			Optional<ConfigValueSections.CategoryGroup> grouping = getCategoryGroup(category);
 			if (grouping.isPresent() && groupedCategories.get(grouping.get().name()).size() > 1) {
 				List<ConfigScreenCategory> members = groupedCategories.get(grouping.get().name());
-				if (members.getFirst() == category) {
+				if (members.get(0) == category) {
 					MutableNode root = createGroup(grouping.get(), members);
 					appendNodes(result, root, category.getGroup(), -1, 0, inlineSubsectionLimit);
 				}
