@@ -13,7 +13,6 @@ import net.mezzdev.config.gui.util.HexColorString;
 import net.mezzdev.config.gui.util.ImmutableRect2i;
 import net.minecraft.network.chat.Component;
 import org.junit.jupiter.api.Test;
-import org.lwjgl.glfw.GLFW;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
@@ -43,9 +42,9 @@ class HexColorConfigEntryTest {
 		for (char c : "#80a1b2c3".toCharArray()) {
 			assertTrue(popup.charTyped(c, 0, values::add));
 		}
-		assertEquals("0x80a1b2c3", values.getLast());
-		assertTrue(popup.keyPressed(GLFW.GLFW_KEY_ENTER, 0, 0, values::add));
-		assertEquals("0x80a1b2c3", values.getLast());
+		assertEquals("0x80a1b2c3", com.google.common.collect.Iterables.getLast(values));
+		assertTrue(popup.keyPressed(com.mojang.blaze3d.platform.InputConstants.KEY_RETURN, 0, 0, values::add));
+		assertEquals("0x80a1b2c3", com.google.common.collect.Iterables.getLast(values));
 		for (char c : "#80ffffff".toCharArray()) {
 			popup.charTyped(c, 0, values::add);
 		}
@@ -61,7 +60,7 @@ class HexColorConfigEntryTest {
 		assertTrue(entry.onMouseClicked(click(102, 5, InputType.SIMULATE)));
 		assertTrue(opened.isEmpty());
 		assertTrue(entry.onMouseClicked(click(102, 5, InputType.EXECUTE)));
-		ConfigPopupSelector popup = opened.getFirst();
+		ConfigPopupSelector popup = opened.get(0);
 		selectColor(popup, 55);
 		assertTrue(entry.getValue().matches("0x[0-9a-f]{6}"));
 		assertNotEquals("0xabcdef", entry.getValue());
@@ -69,11 +68,11 @@ class HexColorConfigEntryTest {
 		assertFalse(popup.closesAfterClick());
 
 		assertTrue(entry.onMouseClicked(click(135, 5, InputType.EXECUTE)));
-		entry.keyPressed(GLFW.GLFW_KEY_DELETE, 0, 0);
+		entry.keyPressed(com.mojang.blaze3d.platform.InputConstants.KEY_DELETE, 0, 0);
 		for (char c : "automatic".toCharArray()) {
 			assertTrue(entry.charTyped(c, 0));
 		}
-		entry.keyPressed(GLFW.GLFW_KEY_ENTER, 0, 0);
+		entry.keyPressed(com.mojang.blaze3d.platform.InputConstants.KEY_RETURN, 0, 0);
 		assertEquals("automatic", entry.getValue());
 		entry.onMouseClicked(click(102, 5, InputType.EXECUTE));
 		assertEquals(1, opened.size());
@@ -87,10 +86,10 @@ class HexColorConfigEntryTest {
 		TextConfigEntry<String> entry = new TextConfigEntry<>(new TestValue<>("#ABCDEF", serializer), serializer, opened::add, null);
 		setField(entry, "valueArea", new ImmutableRect2i(100, 0, 120, 18));
 		entry.onMouseClicked(click(102, 5, InputType.EXECUTE));
-		ConfigPopupSelector popup = opened.getFirst();
+		ConfigPopupSelector popup = opened.get(0);
 		popup.updateBounds(CLIP);
 		ImmutableRect2i area = popup.getArea();
-		assertFalse(popup.onMouseDragged(area.getX() + 55, area.getY() + 55, 0));
+		assertFalse(popup.onMouseDragged(area.getX() + 55, area.getY() + 55, com.mojang.blaze3d.platform.InputConstants.MOUSE_BUTTON_LEFT));
 		assertEquals("#ABCDEF", entry.getValue());
 		assertFalse(entry.hasPendingChange());
 	}
@@ -102,15 +101,15 @@ class HexColorConfigEntryTest {
 		ListSerializer serializer = new ListSerializer(values -> true);
 		ListConfigEntry<String> entry = new ListConfigEntry<>(new TestValue<>(original, serializer), serializer, opened::add, () -> {}, null);
 		clickListSwatch(entry, 1);
-		ConfigPopupSelector popup = opened.getFirst();
+		ConfigPopupSelector popup = opened.get(0);
 		selectColor(popup, 55);
 		String first = entry.getValue().get(1);
 		assertTrue(first.matches("0X80[0-9A-F]{6}"));
 		assertNotEquals(original.get(1), first);
 		selectColor(popup, 95);
 		assertNotEquals(first, entry.getValue().get(1));
-		assertEquals("automatic", entry.getValue().getFirst());
-		assertEquals("#123456", entry.getValue().getLast());
+		assertEquals("automatic", entry.getValue().get(0));
+		assertEquals("#123456", com.google.common.collect.Iterables.getLast(entry.getValue()));
 		assertEquals(original, entry.configValue.getValue());
 		assertTrue(entry.hasPendingChange());
 	}
@@ -122,10 +121,10 @@ class HexColorConfigEntryTest {
 		ListSerializer serializer = new ListSerializer(original::equals);
 		ListConfigEntry<String> entry = new ListConfigEntry<>(new TestValue<>(original, serializer), serializer, opened::add, () -> {}, null);
 		clickListSwatch(entry, 0);
-		ConfigPopupSelector popup = opened.getFirst();
+		ConfigPopupSelector popup = opened.get(0);
 		popup.updateBounds(CLIP);
 		ImmutableRect2i area = popup.getArea();
-		assertFalse(popup.onMouseDragged(area.getX() + 55, area.getY() + 55, 0));
+		assertFalse(popup.onMouseDragged(area.getX() + 55, area.getY() + 55, com.mojang.blaze3d.platform.InputConstants.MOUSE_BUTTON_LEFT));
 		assertEquals(original, entry.getValue());
 		assertFalse(entry.hasPendingChange());
 	}
@@ -133,7 +132,7 @@ class HexColorConfigEntryTest {
 	private static void selectColor(ConfigPopupSelector popup, int x) {
 		popup.updateBounds(CLIP);
 		ImmutableRect2i area = popup.getArea();
-		assertTrue(popup.onMouseDragged(area.getX() + x, area.getY() + 55, 0));
+		assertTrue(popup.onMouseDragged(area.getX() + x, area.getY() + 55, com.mojang.blaze3d.platform.InputConstants.MOUSE_BUTTON_LEFT));
 	}
 
 	private static void clickListSwatch(ListConfigEntry<String> entry, int index) throws Exception {
@@ -149,7 +148,7 @@ class HexColorConfigEntryTest {
 	}
 
 	private static UserInput click(double x, double y, InputType type) {
-		return UserInput.fromVanilla(x, y, 0, type).orElseThrow();
+		return UserInput.fromVanilla(x, y, com.mojang.blaze3d.platform.InputConstants.MOUSE_BUTTON_LEFT, type).orElseThrow();
 	}
 
 	private static void setField(Object target, String name, Object value) throws Exception {
